# vdec

./: CMakeLists.txt
include/vdec/: vdec.h
msvc/: .gitignore  test.vcxproj  unit-test.vcxproj  vdec.sln  vdec.vcxproj
src/: vdec.cpp
src/vdec/: CMakeLists.txt  vdec.cpp
test/: CMakeLists.txt
unit-test/: main.cpp
